Updated some css

--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -18,7 +18,11 @@
 <div class="title">
     <h1>DAW</h1>
 </div>
+<div class="row">
+<img src="speaker.png">
     <div id="stageContainer"></div>
+    <img src="speaker.png">
+</div>
     
     <div class="options">
     <div class="shapeSelector">
@@ -29,8 +33,9 @@
 </div>
 
 <div class="playbackOptions">
+    <div class="tempoControl">
     <label for="tempoSlider" style="color: Black">Tempo: <span id="tempoDisplay">120</span> BPM</label>
-<input type="range" id="tempoSlider" min="60" max="200" value="120">
+<input type="range" id="tempoSlider" min="60" max="200" value="120"></div>
 <button id="playButton"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z"/></svg></button>
 
 <button id="startLoop"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M220-260q-92 0-156-64T0-480q0-92 64-156t156-64q37 0 71 13t61 37l68 62-60 54-62-56q-16-14-36-22t-42-8q-58 0-99 41t-41 99q0 58 41 99t99 41q22 0 42-8t36-22l310-280q27-24 61-37t71-13q92 0 156 64t64 156q0 92-64 156t-156 64q-37 0-71-13t-61-37l-68-62 60-54 62 56q16 14 36 22t42 8q58 0 99-41t41-99q0-58-41-99t-99-41q-22 0-42 8t-36 22L352-310q-27 24-61 37t-71 13Z"/></svg></button>
