--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -19,9 +19,9 @@
     <h1>DAW</h1>
 </div>
 <div class="row">
-<img src="speaker.png">
+<img src="image/speaker.png">
     <div id="stageContainer"></div>
-    <img src="speaker.png">
+    <img src="image/speaker.png">
 </div>
     
     <div class="options">
