--- a/profprac/index.html
+++ b/profprac/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Imaginarium</h1>
 
-        <h2>subheading</h2>
+        <h2>Description about event</h2>
     <h3 class="prompt">prompt question</h3>
 
     <form>
