--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -23,29 +23,51 @@
     <div id="stageContainer"></div>
     <img src="Speaker.png">
 </div>
-    
-    <div class="options">
+    <div class="panel">
+        <div class="stack">
+    <div class="options2">
     <div class="shapeSelector">
-    <button class="changeShape"id="shape1"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#FFFFFF"><path d="M480-46q-91 0-169.99-34.08-78.98-34.09-137.41-92.52-58.43-58.43-92.52-137.41Q46-389 46-480q0-91 34.08-169.99 34.09-78.98 92.52-137.41 58.43-58.43 137.41-92.52Q389-914 480-914q91 0 169.99 34.08 78.98 34.09 137.41 92.52 58.43 58.43 92.52 137.41Q914-571 914-480q0 91-34.08 169.99-34.09 78.98-92.52 137.41-58.43 58.43-137.41 92.52Q571-46 480-46Zm0-126q130 0 219-89t89-219q0-130-89-219t-219-89q-130 0-219 89t-89 219q0 130 89 219t219 89Zm0-308Z"/></svg><path d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></button>
-    <button class="changeShape" id="shape2"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#FFFFFF"><path d="M86-86v-788h788v788H86Zm126-126h536v-536H212v536Zm0 0v-536 536Z"/></svg></button>
-    <button class="changeShape" id="shape3"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#FFFFFF"><path d="m19-126 461-738 461 738H19Zm226-126h470L480-627 245-252Zm235-188Z"/></svg></button>
+    <button class="changeShape"id="shape1"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#000000"><path d="M480-46q-91 0-169.99-34.08-78.98-34.09-137.41-92.52-58.43-58.43-92.52-137.41Q46-389 46-480q0-91 34.08-169.99 34.09-78.98 92.52-137.41 58.43-58.43 137.41-92.52Q389-914 480-914q91 0 169.99 34.08 78.98 34.09 137.41 92.52 58.43 58.43 92.52 137.41Q914-571 914-480q0 91-34.08 169.99-34.09 78.98-92.52 137.41-58.43 58.43-137.41 92.52Q571-46 480-46Zm0-126q130 0 219-89t89-219q0-130-89-219t-219-89q-130 0-219 89t-89 219q0 130 89 219t219 89Zm0-308Z"/></svg><path d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></button>
+    <button class="changeShape" id="shape2"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#000000"><path d="M86-86v-788h788v788H86Zm126-126h536v-536H212v536Zm0 0v-536 536Z"/></svg></button>
+    <button class="changeShape" id="shape3"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#000000"><path d="m19-126 461-738 461 738H19Zm226-126h470L480-627 245-252Zm235-188Z"/></svg></button>
+</div>
+<div id="colourSwatches">
+  <button class="colourButton" data-color=""></button>
+  <button class="colourButton" data-color=""></button>
+  <button class="colourButton" data-color=""></button>
+  <button class="colourButton" data-color=""></button>
+  <button class="colourButton" data-color=""></button>
+  <button class="colourButton" data-color=""></button>
+    <button id="reloadSwatches"><svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 -960 960 960" width="48px" fill="#000000"><path d="M480-80q-75 0-140.5-28T225-185q-49-49-77-114.5T120-440h60q0 125 87.5 212.5T480-140q125 0 212.5-87.5T780-440q0-125-85-212.5T485-740h-23l73 73-41 42-147-147 147-147 41 41-78 78h23q75 0 140.5 28T735-695q49 49 77 114.5T840-440q0 75-28 140.5T735-185q-49 49-114.5 77T480-80Z"/></svg></button>
+</div>
 </div>
 
+    <div class="options">
 <div class="playbackOptions">
-<button id="playButton"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#ffffff"><path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z"/></svg></button>
+<button id="playButton"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#000000"><path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z"/></svg></button>
 
-<button id="startLoop"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M220-260q-92 0-156-64T0-480q0-92 64-156t156-64q37 0 71 13t61 37l68 62-60 54-62-56q-16-14-36-22t-42-8q-58 0-99 41t-41 99q0 58 41 99t99 41q22 0 42-8t36-22l310-280q27-24 61-37t71-13q92 0 156 64t64 156q0 92-64 156t-156 64q-37 0-71-13t-61-37l-68-62 60-54 62 56q16 14 36 22t42 8q58 0 99-41t41-99q0-58-41-99t-99-41q-22 0-42 8t-36 22L352-310q-27 24-61 37t-71 13Z"/></svg></button>
-<button id="stopLoop"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M320-320h320v-320H320v320ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></button>
+<button id="startLoop"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#000000"><path d="M280-80 120-240l160-160 42 44-86 86h464v-160h60v220H236l86 86-42 44Zm-80-450v-220h524l-86-86 42-44 160 160-160 160-42-44 86-86H260v160h-60Z"/></svg></button>
+<button id="stopLoop"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" fill="#000000"><path d="M320-320h320v-320H320v320ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></button>
 </div>
-<div class="tempoControl">
-    <label for="tempoSlider" style="color: Black">Tempo: <span id="tempoDisplay">120</span> BPM</label>
+</div>
+</div>
+
+    <div class="options">
+<div class="slideControl">
+    <p>BPM</p><span id="tempoDisplay">120</span></label>
 <input type="range" id="tempoSlider" min="60" max="200" value="120"></div>
-</div>
-<div class="secondRow">
-<button id="saveImg"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z"/></svg></button>
-<button id="resetImg"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M120-280v-80h560v80H120Zm80-160v-80h560v80H200Zm80-160v-80h560v80H280Z"/></svg></button>
-<label for=volSlider><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M560-131v-82q90-26 145-100t55-168q0-94-55-168T560-749v-82q124 28 202 125.5T840-481q0 127-78 224.5T560-131ZM120-360v-240h160l200-200v640L280-360H120Zm440 40v-322q47 22 73.5 66t26.5 96q0 51-26.5 94.5T560-320ZM400-606l-86 86H200v80h114l86 86v-252ZM300-480Z"/></svg></label>
+<div class="slideControl">
+<label for=volSlider><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#FFFFFF"><path d="M560-131v-82q90-26 145-100t55-168q0-94-55-168T560-749v-82q124 28 202 125.5T840-481q0 127-78 224.5T560-131ZM120-360v-240h160l200-200v640L280-360H120Zm440 40v-322q47 22 73.5 66t26.5 96q0 51-26.5 94.5T560-320ZM400-606l-86 86H200v80h114l86 86v-252ZM300-480Z"/></svg></label>
 <input type="range" id="volSlider" min="0" max="100" step="1" value="100">
+</div>
+</div>
+
+    <div class="options">
+<div class="secondRow">
+<button id="saveImg"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z"/></svg></button>
+<button id="resetImg"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M480-160q-133 0-226.5-93.5T160-480q0-133 93.5-226.5T480-800q85 0 149 34.5T740-671v-129h60v254H546v-60h168q-38-60-97-97t-137-37q-109 0-184.5 75.5T220-480q0 109 75.5 184.5T480-220q83 0 152-47.5T728-393h62q-29 105-115 169t-195 64Z"/></svg></button>
+</div>
+</div>
 </div>
 </body>
 </html>
