--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -69,5 +69,10 @@
 </div>
 </div>
 </div>
+<div class="legend">
+        <h4>DRAWABLE-AUDIO-WORKSTATION (2025)</h4>
+        <h5>Left Click: Add</h5>
+        <h5>Right Click: Remove</h5>
+</div>
 </body>
 </html>
