--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -73,6 +73,7 @@
         <h4>DRAWABLE-AUDIO-WORKSTATION (2025)</h4>
         <h5>Left Click: Add</h5>
         <h5>Right Click: Remove</h5>
+        <h5>Hold down: Drag</h5>
 </div>
 </body>
 </html>
