added some images for buttons

--- a/dms5/reflection/index.html
+++ b/dms5/reflection/index.html
@@ -10,16 +10,43 @@
 <body>
     <h1>DMS5 Reflections</h1>
 
-    <div class="judgement">
-    <button><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#FFFFFF"><path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h240l80 80h320q33 0 56.5 23.5T880-640v400q0 33-23.5 56.5T800-160H160Zm0-80h640v-400H447l-80-80H160v480Zm0 0v-480 480Z"/></svg>
-        <p>Judgement 1</p></button>
+    <div class="judgement" onclick="popupFunction()">
+<button class="popupBox" id="popupButton"> <img src="icons/directory_closed-4.png" alt="judgement1">Purpose</button>
 </div>
 
-    <div class="judgement">
-    <button><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#FFFFFF"><path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h240l80 80h320q33 0 56.5 23.5T880-640v400q0 33-23.5 56.5T800-160H160Zm0-80h640v-400H447l-80-80H160v480Zm0 0v-480 480Z"/></svg>
-        <p>Judgement 2</p></button>
+    <div class="judgement" onclick="popupFunction()">
+<button class="popupBox" id="popupButton"> <img src="icons/directory_closed-4.png" alt="judgement2">Worth</button>
+</div>
+
+    <div class="judgement" onclick="popupFunction()">
+<button> <img src="icons/directory_closed-4.png" alt="judgement3">Framing</button>
+</div>
+
+    <div class="judgement" onclick="popupFunction()">
+<button> <img src="icons/directory_closed-4.png" alt="judgement4">Appearance</button>
+</div>
+
+    <div class="judgement" onclick="popupFunction()">
+<button> <img src="icons/directory_closed-4.png" alt="judgement5">Quality</button>
+</div>
+
+    <div class="judgement" onclick="popupFunction()">
+<button> <img src="icons/directory_closed-4.png" alt="judgement6">Composition</button>
+</div>
+
+    <div class="judgement" onclick="popupFunction()">
+<button> <img src="icons/directory_closed-4.png" alt="judgement7">Navigation</button>
 </div>
 
 
 </body>
+
+<script>
+// When the user clicks on <div>, open the popup
+function popupFunction() {
+  var popup = document.getElementById("popupButton");
+  popup.classList.toggle("show");
+}
+</script>
+
 </html>
