--- a/dms5/reflection/index.html
+++ b/dms5/reflection/index.html
@@ -4,49 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
     <title>DMS5 Reflection</title>
 </head>
 
 <body>
-    <h1>DMS5 Reflections</h1>
 
-    <div class="judgement" onclick="popupFunction()">
-<button class="popupBox" id="popupButton"> <img src="icons/directory_closed-4.png" alt="judgement1">Purpose</button>
+<div class="judgement">
+<button class="popupBox" data-title="Judgement of Purpose" data-content="The technical goals of this project is to create a web application that enables users to play around with shapes and colours to create sound, Which I feel like it has been sufficiently achieved. 
+
+<br><br>The other aim of this project is to provide a platform for users to express themselves in a fun and unique way with a low barrier of entry. DAW’s simplicity and functionalities seems to have successfully pushed this intention.
+
+<br><br>The hope and goal for the users of DAW is to find a few minutes, or even hours of fun from simply playing around and experimenting with different shape and position and colour setups, and craft something that expresses themselves both visually and in sound.
+">
+  <img src="icons/directory_closed-4.png" alt="judgement of Purpose">Purpose
+</button>
 </div>
 
-    <div class="judgement" onclick="popupFunction()">
-<button class="popupBox" id="popupButton"> <img src="icons/directory_closed-4.png" alt="judgement2">Worth</button>
+<div class="judgement">
+<button class="popupBox" data-title="Judgement of Worth" data-content="A core value that this project expresses is creativity. Many times during the design process, I was given the option to limit the creativity of the user by restricting the way some things worked like reworking the freeform placement of shapes to grid based or changing the object choices to simply squares. Sure, these changes make for a simpler, cleaner and more polished project in terms of usability and debugging, however, my intention from the beginning has always been “Creative expression” above all else, thus, it is absolutely important that the project gives the user as much options as possible with shapes, colours and placement, with as little chance of two projects being the absolute same as possible.
+
+<br><br>Accessibility is also something that is valued throughout the conceptualisation of this project. This can be seen from the simplicity of the UI and application as a whole, with just enough buttons to enable a good amount of control over the final product, but not too much that it becomes overwhelming and complicated for the user. 
+
+<br><br>Accessibility leads into the educational value of the application. The setup functionalities of DAW provides users such as children or the less musically inclined to a fun way to learn about music notes and visualise how notes on a music sheet functions without the need to dive into full on music theory or learning musical notation. 
+">
+  <img src="icons/directory_closed-4.png" alt="judgement of Worth">Worth
+</button>
 </div>
 
-    <div class="judgement" onclick="popupFunction()">
-<button> <img src="icons/directory_closed-4.png" alt="judgement3">Framing</button>
+<div class="judgement">
+<button class="popupBox" data-title="Judgement of Framing" data-content="There's been quite a few internal changes regarding how the canvas of DAW will work, such as the original concept of free drawing. Free drawing was originally something that seemed like a core feature for the success of the software, however, upon implementation, it was discovered that most basic implementation of free drawing was extremely unoptimised and not feasible in achieving a smooth, accessible user experience. Thus, the decision to restrict the visuals to just using three shapes; circle, shape and triangle, was chosen.
+
+<br><br>These shapes were chosen as they were basic, familiar shapes, these shapes were also chosen as they each possessed a unique property: curved edges, straight edges and diagonal edges. These shapes should theoretically allow for the creation of any artwork. Additionally, the choice to limit the canvas to these shapes simplifies the experience and understanding of the application.
+
+<br><br>Speaking of “Simplifying the experience”, the entire project actually places huge emphasis on this phrase. Looking back at the target audience of children and the purpose of being an accessible, easy to use tool with potential educational values, it’s important that the application does not fall into the trap of “Feature creep” where new features just continually get introduced without any thought for the user experience. Thus, the control panel contains the most basic buttons and sliders to enable the users enough control over the creation of their artwork and music.
+">
+  <img src="icons/directory_closed-4.png" alt="judgement of Framing">Framing
+</button>
 </div>
 
-    <div class="judgement" onclick="popupFunction()">
-<button> <img src="icons/directory_closed-4.png" alt="judgement4">Appearance</button>
+<div class="judgement">
+<button class="popupBox" data-title="Judgement of Appearance" data-content="DAW is created with the intention of mimicking a notebook and a physical sound controller, with “children’s imagination” as the primary driving force, DAW seeks to imitate and recreate the feeling of a sultry afternoon of one’s childhood, doodling on a sketchbook and imagining each of the sketches coming to life or representing something else. That’s why DAW is so visually simple compared to full-feature drawing softwares and music creation softwares.
+With reference to the intention of simplicity, DAW is split between 3 main sections:
+<ul>
+<li>The Canvas</li>
+<li>The Speakers</li>
+<li>The Buttons panel</li>
+</ul>
+The main rationale of these 3 sections is to let the users have a clear sense of how to navigate the site. Using visual hierarchy, the user navigates to the main focus of the page, the canvas, conveniently placed in the center of the application. This hopefully prompts the user to start by clicking the canvas, placing their first shape and hearing their first sound.
+<br><br>After tinkering with the canvas, users are naturally led to the button panels, which allows the users more control over what and how they decide to create with the canvas.
+<br><br>This simplified aesthetics makes DAW a straightforward education tool that anybody can pick up.
+<br><br>The speakers on the sides of the canvas not only unifies the aesthetic choice of a early 2010’s web application, they also serve a practical purpose: enhancing feedback. With each sound that is played through the application, the speaker bounces, giving visual feedback to the user that this site is indeed playing sound, and incase users have their computers muted; to turn on their volume in order to experience the site fully.
+<br><br>Looking back, I have wanted DAW to be a much more “skeuomorphic” looking application, with knobs, sliders, 3d buttons and textures on each of the site’s elements and buttons. I believe that skeuomorphism represents the time period (early 2010s) the best, and naturally, DAW should follow that kind of aesthetics. However, due to time constraints and limited experience in more advanced css, I simplified it. Certainly elements of skeuomorphism can be derived from the control panel and how each interaction was represented, but I believe much more can be done in that regard.
+">
+  <img src="icons/directory_closed-4.png" alt="Judgement of Appearance">Appearance
+</button>
 </div>
 
-    <div class="judgement" onclick="popupFunction()">
-<button> <img src="icons/directory_closed-4.png" alt="judgement5">Quality</button>
+<div class="judgement">
+<button class="popupBox" data-title="Judgement of Quality" data-content="Early in the planning and conceptualisation of the application, there was a bit of an internal debate on how the image to sound canvas should have been implemented: How should the elements on canvas be represented in sound? Should it have played every sound concurrently as the play button is pressed? Should it play by which shape was placed first? Should it play by a playhead scrolling from left to right?
+<br><br>These questions plagued me for a little while as I thought of how each of these could be implemented technically. Playing every sound concurrently is the easiest option out of the three, however, upon testing, I realised that It just turned into a jumbled mess when more shapes were added, I had expected there to be more harmonisation but as synth sound effects, they were not harmonious at all.
+<br><br>Next, Playing each sound based on the order it was added onto the canvas. Upon testing this implementation, The sounds played were definitely clearer than the incoherent mess that is everything, all at once. However, one big problem is that there is no timing and rhythm involved in the sounds, and it definitely does not sound or feel like “making music”, thus, this implementation had to be scrapped too.
+<br><br>Finally, I landed on using a playhead and letting it scroll through the canvas, playing any sounds that it touches. This implementation worked surprisingly well and smooth considering that it did not take much tweaking to the previous code to implement. With a playhead, I was able to control when the sounds are played, giving more options in the placements of the shapes, This also opens up another controllable parameter for the user to play with: the tempo. I added a tempo slider to control the speed of the playhead, which increases or decreases the BPM of the sequence of sounds played. With this implementation, the sounds are beginning to sound more pleasant and controlled.
+
+<br><br>Another technical choice that haunted me for a little bit is the role played by colour in the application. Originally, one of the concepts of the application included using colours to represent pitch instead of location, or the both of it at once, providing a little more “novelty” to the application, differing it from similar projects done by others. However, during feedback and discussion in class, it was raised that if colour indicated pitch, what would location do? How can the user create a satisfactory art piece with a pleasant sequence of sounds if they are forced to use specific colours in the creation of their artwork? 
+<br><brThese questions were quite on point as it led me to reconsider the role of colour in the application. On one hand, I want the user to create artwork that they enjoy looking at, and a mishmash of random colours in order to achieve a decent listenable sound piece was definitely not the right move. Thus, I believe instead of holding colour hostage, I should give users free reign of colours in the canvas without affecting how the end product of sound will look like.
+">
+  <img src="icons/directory_closed-4.png" alt="Judgement of Quality">Quality
+</button>
 </div>
 
-    <div class="judgement" onclick="popupFunction()">
-<button> <img src="icons/directory_closed-4.png" alt="judgement6">Composition</button>
+<div class="judgement">
+<button class="popupBox" data-title="Judgement of Composition" data-content="Gestalt emphasises that “The whole is more than the sum of it’s parts”. In the context of DAW, each and every element on the page contributes to the successful operation of the application.
+<br><br>For proximity, the elements in the application are placed fairly closely to each other, building connections between the speakers, canvas and buttons. Having a large amount of empty space outside of the main application also helps in guiding the user to focus on the central part of the application, where each of the interactable elements are.
+<br><br>There were also considerations placed onto the figure of each element. The main content of the application is noticeably contrasting to the background, allowing users to distinguish the functional and non-function parts of the application.
+<br><br>DAW’s final design also places some emphasis on balance. It is equally important to create a visually appealing application as a functional one. Thus, most elements are placed with center alignment.
+">
+  <img src="icons/directory_closed-4.png" alt="Judement of Composition">Composition
+</button>
 </div>
 
-    <div class="judgement" onclick="popupFunction()">
-<button> <img src="icons/directory_closed-4.png" alt="judgement7">Navigation</button>
+<div class="judgement">
+<button class="popupBox" data-title="Judgement of Navigation" data-content="The priority in terms of navigation is during the conceptualisation and development is to create a UI that doesn’t need words to understand. 
+<br><br>During the development of this project, I have pondered over whether to make this into a full fledged “game” like application complete with a starting screen, play button, etc. However, I felt that DAW is best served as a program that can be accessible and immediately dived into as soon as opening the page without any loading screens, confirmations and extra steps.
+<br><br>Unfortunately, as much as I would have preferred the application to explain each and every function for itself visually, or through user experimentation, there were some decisions regarding the control scheme that eventually warranted some instructions: namely the right click to remove.
+<br><br>I honestly do not consider my application “perfect” by any means, however, I really do enjoy the process of planning, creating, working around technical and aesthetic setbacks, but most importantly, making something for the enjoyment of others.
+">
+  <img src="icons/directory_closed-4.png" alt="Judgement of navigation">Navigation
+</button>
 </div>
 
+<div id="panel" class="info-panel">
+  <div class="panel-header">
+    <span class="close-btn" onclick="closePanel()">×</span>
+    <h2 id="panel-title"></h2>
+  </div>
+  <div class="panel-body">
+    <p id="panel-content"></p>
+  </div>
+</div>
 
+<footer>
+        <p>Digital Media Studio 5, Assignment 4</p>
+    <h4>A Chen Luohan Site</h4>
+</footer>
 </body>
-
-<script>
-// When the user clicks on <div>, open the popup
-function popupFunction() {
-  var popup = document.getElementById("popupButton");
-  popup.classList.toggle("show");
-}
-</script>
-
 </html>
