--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">    
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>Chen Luohan's Portfolio</title>
   </head>
   <body>
@@ -31,37 +32,6 @@
       <a href="#motion">Motion</a>
     </div>
     
-    <div class="card-container">
-      <!-- Card 1 -->
-      <div class="image-card" onclick="alert('Card 1 clicked!')">
-          <img src="https://picsum.photos/400/300?random=1" alt="Random Image 1">
-      </div>
-
-      <!-- Card 2 -->
-      <div class="image-card" onclick="alert('Card 2 clicked!')">
-          <img src="https://picsum.photos/400/300?random=2" alt="Random Image 2">
-      </div>
-
-      <!-- Card 3 -->
-      <div class="image-card" onclick="alert('Card 3 clicked!')">
-          <img src="https://picsum.photos/400/300?random=3" alt="Random Image 3">
-      </div>
-
-      <!-- Card 4 -->
-      <div class="image-card" onclick="alert('Card 4 clicked!')" >
-          <img src="https://picsum.photos/400/300?random=5" alt="Random Image 4">
-      </div>
-
-            <!-- Card 5 -->
-      <div class="image-card" onclick="alert('Card 4 clicked!')" >
-          <img src="https://picsum.photos/400/300?random=5" alt="Random Image 5">
-      </div>
-
-            <!-- Card 6 -->
-      <div class="image-card" onclick="alert('Card 4 clicked!')" >
-          <img src="https://picsum.photos/400/300?random=6" alt="Random Image 6">
-      </div>
-  </div>
     <div class="footer">
     </div>
   </body>
