--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,34 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <title>Chen Luohan's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
+    <title>Chen Luohan’s Portfolio</title>
   </head>
   <body>
     <nav>
-      <div class="logo">
-<a href="index.html">Chen Luohan</a></div>
-</div>
-<div class="selection">
-  <a href="about.html">ABOUT</a>
-  <a href="contact.html">CONTACT</a>
-</div>
+      <div class="logo"><a href="index.html">Chen Luohan</a></div>
+      <div class="selection">
+        <a href="about.html">ABOUT</a>
+        <a href="contact.html">CONTACT</a>
+      </div>
     </nav>
 
-    <div class="container">
+    <main>
+      <div class="carousel">
+        <div class="carousel-track">
+          <img src="https://placehold.co/600x400/orange/white" alt="Image 1" draggable="false" />
+          <img src="https://placehold.co/600x400/yellow/black" alt="Image 2" draggable="false"/>
+          <img src="https://placehold.co/600x400/red/white" alt="Image 3" draggable="false"/>
+          <img src="https://placehold.co/600x400/green/black" alt="Image 4" draggable="false"/>
+          <img src="https://placehold.co/600x400/blue/white" alt="Image 5" draggable="false"/>
+          <img src="https://placehold.co/600x400/coral/white" alt="Image 6" draggable="false"/>
+          <img src="https://placehold.co/600x400/lime/black" alt="Image 7" draggable="false"/>
+          <img src="https://placehold.co/600x400/brown/white" alt="Image 8" draggable="false"/>
+          <img src="https://placehold.co/600x400/pink/black" alt="Image 9" draggable="false"/>
+          <img src="https://placehold.co/600x400/navy/white" alt="Image 10" draggable="false"/>
+        </div>
+      </div>
+    </main>
 
-    <div class="medium">
-      <a href="#all">All</a>
-      <a href="#video">Video</a>
-      <a href="#web">Web</a>
-      <a href="#audio">Audio</a>
-      <a href="#grahic">Graphics</a>
-      <a href="#motion">Motion</a>
-    </div>
-    
-    <div class="footer">
-    </div>
+    <div class="footer"></div>
+    <script src="script.js"></script>
   </body>
 </html>
