--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,46 +1,53 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <title>Chen Luohan’s Portfolio</title>
-  </head>
-  <body>
-    <nav>
-      <div class="logo"><a href="index.html">Chen Luohan</a></div>
-      <div class="selection">
-        <a href="about.html">ABOUT</a>
-        <a href="contact.html">CONTACT</a>
-      </div>
-    </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+  <title>Chen Luohan’s Portfolio</title>
+</head>
+<body>
+  <!-- Top Navbar -->
+  <nav class="navbar">
+    <div class="navbar-left"><a href="index.html">Chen Luohan</a></div>
+    <div class="navbar-right">
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </div>
+  </nav>
 
-    <main>
-      <div class="carousel">
-        <div class="carousel-track">
-          <img src="https://placehold.co/600x400/orange/white" alt="Image 1" draggable="false" />
-          <img src="https://placehold.co/600x400/yellow/black" alt="Image 2" draggable="false"/>
-          <img src="https://placehold.co/600x400/red/white" alt="Image 3" draggable="false"/>
-          <img src="https://placehold.co/600x400/green/black" alt="Image 4" draggable="false"/>
-          <img src="https://placehold.co/600x400/blue/white" alt="Image 5" draggable="false"/>
-          <img src="https://placehold.co/600x400/coral/white" alt="Image 6" draggable="false"/>
-          <img src="https://placehold.co/600x400/lime/black" alt="Image 7" draggable="false"/>
-          <img src="https://placehold.co/600x400/brown/white" alt="Image 8" draggable="false"/>
-          <img src="https://placehold.co/600x400/pink/black" alt="Image 9" draggable="false"/>
-          <img src="https://placehold.co/600x400/navy/white" alt="Image 10" draggable="false"/>
-        </div>
-      </div>
-    </main>
+  <!-- Canvas for rendering -->
+  <canvas id="imageCanvas"></canvas>
 
-    <div class="footer"></div>
-    <script src="script.js"></script>
-  </body>
+  <!-- Hidden image definitions -->
+  <div id="imagePool" style="display:none;">
+    <img id="web" src="images/ImaginariumFull.JPG" />
+    <img id="web" src="images/daw_full.png" />
+    <img id="photo" src="https://placehold.co/300x300/red/white" />
+    <img id="photo" src="https://placehold.co/300x300/green/black" />
+    <img id="sound" src="https://placehold.co/300x300/blue/white" />
+    <img id="sound" src="https://placehold.co/300x300/coral/white" />
+    <img id="graphic" src="https://placehold.co/300x300/lime/black" />
+    <img id="graphic" src="https://placehold.co/300x300/brown/white" />
+    <img id="graphic" src="https://placehold.co/300x300/pink/black" />
+    <img id="graphic" src="https://placehold.co/300x300/navy/white" />
+  </div>
+
+  <!-- Fullscreen Overlay -->
+  <div id="overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:black; justify-content:center; align-items:center; z-index:100;">
+    <img id="overlayImg" style="max-width:90vw; max-height:90vh;" />
+  </div>
+
+  <!-- Bottom Filter Bar -->
+  <div class="filter-bar">
+    <button data-type="all" class="active">All</button>
+    <button data-type="web">Web Design</button>
+    <button data-type="photo">Photo and Video</button>
+    <button data-type="sound">Sound Design</button>
+    <button data-type="graphic">Graphic Design</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
