remade portfolio...again

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
   <title>Luohan Chen Design Works</title>
 </head>
 <body>
@@ -16,7 +18,11 @@
   <button id="selection2">Interactive Design</button>
   <button id="selection3">Visuals Design</button>
   <button id="selection2">Sound Design</button>
+  <h3>Look Good</h3>
+</div>
 
+<div class="content">
+  
 </div>
 
 </body>
