--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <title>Luohan Chen Design Works</title>
@@ -10,19 +13,25 @@
 <body>
 
 <div class="header">
-  <h3>Hello, I am</h3>
-  <h1>Luohan Chen</h1>
-  <h3>Digital Media Designer</h3>
-  <h4>and I make</h4>
-  <button id="selection1">Everything</button>
-  <button id="selection2">Interactive Design</button>
-  <button id="selection3">Visuals Design</button>
-  <button id="selection2">Sound Design</button>
-  <h3>Look Good</h3>
+  <div class="wrap-l">
+    <h1>Luohan Chen</h1>
+    <h3>Is a</h3>
+      <div class="buttonContainer">
+        <button id="all">Digital Media Designer</button>
+        <button id="web">Interaction Designer</button>
+        <button id="graphic">Visual Designer</button>
+        <button class="sd" id="sound">Sound Designer</button>
+      </div>
+  </div>
+
+  <div class="wrap-r">
+    <a href="about.html">ABOUT</a>
+    <a class="cont" href="contact.html">CONTACT</a>
+  </div>
 </div>
 
 <div class="content">
-  
+
 </div>
 
 </body>
