remade again lol

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,27 +12,96 @@
 </head>
 <body>
 
+<div class="nav">
+  <div class="nav-links">
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </div>
+  <div class="burger-menu">&#9776;</div>
+  <div class="mobile-menu">
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </div>
+</div>
+
 <div class="header">
-  <div class="wrap-l">
     <h1>Luohan Chen</h1>
     <h3>Is a</h3>
       <div class="buttonContainer">
-        <button id="all">Digital Media Designer</button>
+        <button id="all" class="active">Digital Media Designer</button>
         <button id="web">Interaction Designer</button>
         <button id="graphic">Visual Designer</button>
         <button class="sd" id="sound">Sound Designer</button>
-      </div>
-  </div>
-
-  <div class="wrap-r">
-    <a href="about.html">ABOUT</a>
-    <a class="cont" href="contact.html">CONTACT</a>
   </div>
 </div>
 
-<div class="content">
+  <div class="gallery" id="gallery">
+    <div class="image-card">
+    <img src="images/daw_full.png" id="web" alt="Web Design 1" draggable="false">
+    <p class="category">WEB / INTERACTIVE</p>
+    <p class="caption">DRAWABLE AUDIO WEBSTATION</p>
+    </div>
 
-</div>
+    <div class="image-card">
+    <img src="images/luckycards.png" id="web" alt="Web Design 2" draggable="false">
+        <p class="category">WEB / INTERACTIVE</p>
+        <p class="caption">VERY LUCKY CARDS</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/ImaginariumFull.JPG" id="web" alt="Web Design 3" draggable="false">
+        <p class="category">WEB / EXPERIENCE</p>
+        <p class="caption">THE IMAGINARIUM</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/struggle.png" id="web" alt="Web Design 4" draggable="false">
+        <p class="category">INTERACTIVE</p>
+        <p class="caption">THE STRUGGLE</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/amf.JPG" id="graphic" alt="Graphic Design 1" draggable="false">
+        <p class="category">MOTION GRAPHIC / EXPERIENCE</p>
+        <p class="caption">AMAA X FORTRESS ARTIST ALLEY</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/gamestall.png" id="graphic" alt="Graphic Design 2" draggable="false">
+        <p class="category">3D</p>
+        <p class="caption">NIGHT MARKET GAME STALL</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/rbc.png" id="graphic" alt="Graphic Design 3" draggable="false">
+        <p class="category">GRAPHIC / SOCIAL MEDIA</p>
+        <p class="caption">RMIT BADMINTON CLUB</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/abyshoot_thumbnail.JPG" id="graphic" alt="Graphic Design 4" draggable="false">
+        <p class="category">PHOTOGRAPHY</p>
+        <p class="caption">FASHION PHOTOSHOOT</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/stellar.png" id="graphic" alt="Graphic Design 5" draggable="false">
+        <p class="category">MOGRAPH</p>
+        <p class="caption">STELLAR STELLAR</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/Dapurama.png" id="sound" alt="Sound Design 1" draggable="false">
+        <p class="category">SOUND DESIGN</p>
+        <p class="caption">DAPUR AMA</p>
+    </div>
+
+    <div class="image-card">
+    <img src="images/shush.png" id="sound" alt="Sound Design 2" draggable="false">
+        <p class="category">SOUND DESIGN</p>
+        <p class="caption">SHUSH</p>
+    </div>
+  </div>
 
 </body>
 </html>
