--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,9 @@
 <body>
 
 <div class="nav">
+  <div class="name">
+    <a href="index.html">Luohan Chen</a>
+  </div>
   <div class="nav-links">
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
