optimisation and bugfixes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
 
 <div class="nav">
   <div class="name">
-    <a href="index.html">Luohan Chen</a>
+    <a href="index.html">Luohan Chen Design Works</a>
   </div>
   <div class="nav-links">
     <a href="about.html">About</a>
@@ -40,67 +40,67 @@
 
   <div class="gallery" id="gallery">
     <div class="image-card">
-    <img src="images/daw_full.png" id="web" alt="Web Design 1" draggable="false">
+    <img src="images/daw_full.png" id="web" alt="Web Design 1" draggable="false" loading="lazy">
     <p class="category">WEB / INTERACTIVE</p>
     <p class="caption">DRAWABLE AUDIO WEBSTATION</p>
     </div>
 
     <div class="image-card">
-    <img src="images/luckycards.png" id="web" alt="Web Design 2" draggable="false">
+    <img src="images/luckycards.jpg" id="web" alt="Web Design 2" draggable="false" loading="lazy">
         <p class="category">WEB / INTERACTIVE</p>
         <p class="caption">VERY LUCKY CARDS</p>
     </div>
 
     <div class="image-card">
-    <img src="images/ImaginariumFull.JPG" id="web" alt="Web Design 3" draggable="false">
+    <img src="images/ImaginariumFull.jpg" id="web" alt="Web Design 3" draggable="false" loading="lazy">
         <p class="category">WEB / EXPERIENCE</p>
         <p class="caption">THE IMAGINARIUM</p>
     </div>
 
     <div class="image-card">
-    <img src="images/struggle.png" id="web" alt="Web Design 4" draggable="false">
+    <img src="images/struggle.jpg" id="web" alt="Web Design 4" draggable="false" loading="lazy">
         <p class="category">INTERACTIVE</p>
         <p class="caption">THE STRUGGLE</p>
     </div>
 
     <div class="image-card">
-    <img src="images/amf.JPG" id="graphic" alt="Graphic Design 1" draggable="false">
+    <img src="images/amf.jpg" id="graphic" alt="Graphic Design 1" draggable="false" loading="lazy">
         <p class="category">MOTION GRAPHIC / EXPERIENCE</p>
         <p class="caption">AMAA X FORTRESS ARTIST ALLEY</p>
     </div>
 
     <div class="image-card">
-    <img src="images/gamestall.png" id="graphic" alt="Graphic Design 2" draggable="false">
+    <img src="images/gamestall.jpg" id="graphic" alt="Graphic Design 2" draggable="false" loading="lazy">
         <p class="category">3D</p>
         <p class="caption">NIGHT MARKET GAME STALL</p>
     </div>
 
     <div class="image-card">
-    <img src="images/rbc.png" id="graphic" alt="Graphic Design 3" draggable="false">
+    <img src="images/rbc.png" id="graphic" alt="Graphic Design 3" draggable="false" loading="lazy">
         <p class="category">GRAPHIC / SOCIAL MEDIA</p>
         <p class="caption">RMIT BADMINTON CLUB</p>
     </div>
 
     <div class="image-card">
-    <img src="images/abyshoot_thumbnail.JPG" id="graphic" alt="Graphic Design 4" draggable="false">
+    <img src="images/abyshoot.jpg" id="graphic" alt="Graphic Design 4" draggable="false" loading="lazy">
         <p class="category">PHOTOGRAPHY</p>
         <p class="caption">FASHION PHOTOSHOOT</p>
     </div>
 
     <div class="image-card">
-    <img src="images/stellar.png" id="graphic" alt="Graphic Design 5" draggable="false">
+    <img src="images/stellar.jpg" id="graphic" alt="Graphic Design 5" draggable="false" loading="lazy">
         <p class="category">MOGRAPH</p>
         <p class="caption">STELLAR STELLAR</p>
     </div>
 
     <div class="image-card">
-    <img src="images/Dapurama.png" id="sound" alt="Sound Design 1" draggable="false">
+    <img src="images/Dapurama.jpg" id="sound" alt="Sound Design 1" draggable="false" loading="lazy">
         <p class="category">SOUND DESIGN</p>
         <p class="caption">DAPUR AMA</p>
     </div>
 
     <div class="image-card">
-    <img src="images/shush.png" id="sound" alt="Sound Design 2" draggable="false">
+    <img src="images/shush.jpg" id="sound" alt="Sound Design 2" draggable="false" loading="lazy">
         <p class="category">SOUND DESIGN</p>
         <p class="caption">SHUSH</p>
     </div>
