--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -106,5 +106,29 @@
     </div>
   </div>
 
+  <div class="footer1">
+
+        <div class="ft">
+      <p>Like what you see?</p>
+      <Button>Work with me!</Button>
+    </div>
+
+    <div class="ftl">
+      <p>Socials:</p>
+      <a href="instagram.html">Instagram</a>
+      <a href="Linkedin.html">Linkedin</a>
+    </div>
+  </div>
+  <div class="footer2">
+    <div class="fl">
+    <p>2025©</p>
+    </div>
+
+    <div class="fr">
+    <p>Made with Love.</p>
+    </div>
+  </div>
+  </div>
+
 </body>
 </html>
