--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,11 +20,6 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </div>
-  <div class="burger-menu">&#9776;</div>
-  <div class="mobile-menu">
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </div>
 </div>
 
 <div class="header">
@@ -106,26 +101,23 @@
     </div>
   </div>
 
-  <div class="footer1">
+<div class="footer1">
 
-        <div class="ft">
+        <div class="ft footer-animate">
       <p>Like what you see?</p>
       <Button>Work with me!</Button>
     </div>
 
-    <div class="ftl">
-      <p>Socials:</p>
-      <a href="instagram.html">Instagram</a>
-      <a href="Linkedin.html">Linkedin</a>
-    </div>
-  </div>
-  <div class="footer2">
-    <div class="fl">
+</div>
+
+<div class="footer2">
+    <div class="fl footer-animate">
     <p>2025©</p>
     </div>
 
-    <div class="fr">
-    <p>Made with Love.</p>
+    <div class="fr footer-animate">
+    <a href="instagram.com">INSTAGRAM</a>
+    <a href="linkedin.com">LINKEDIN</a>
     </div>
   </div>
   </div>
