--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -22,6 +22,12 @@
   </div>
 </div>
 
+<div class="main">
+  <img src="luohan.jpg" alt="Luohan Chen">
+  <div class="abtDescription">
+  <h2>Luohan Chen is a multidiscplinary designer. </h2></div>
+</div>
+
 
 <div class="footer1">
 
